# DyRCA

./: .gitignore  .venv  Dockerfile  analysis.py  best_rca_model.pth  best_rca_model_metadata.pkl  best_rca_model_r2.pth  best_rca_model_r2_metadata.pkl  client.py  entrypoint.sh  incremental_model.pth  info.toml  main.py  pyproject.toml  pyproject_gpu.toml  readme.md  requirements.txt  run_exp.py
data/RCABENCH/: metric_to_idx.pkl  service_to_idx.pkl
data/RCABENCH/samples/: test_labels.pkl  test_samples.pkl  train_labels.pkl  train_samples.pkl
data/RCAEVAL_re2_ob/: metric_to_idx.pkl  service_to_idx.pkl
data/RCAEVAL_re2_ob/samples/: test_labels_v1.pkl  test_samples_v1.pkl  train_labels_v1.pkl  train_samples_v1.pkl
src/rca/: analysis.py  dataset.py  incremental_training.py  main.py  model.py  preprocess.py  rcaeval_preprocess.py  train.py  training.py
study/: dataset_study.py
